--- a/admin-dev/themes/new-theme/scss/components/_category_tree.scss
+++ b/admin-dev/themes/new-theme/scss/components/_category_tree.scss
@@ -14,6 +14,8 @@ ul.category-tree {
       font-size: 1.25rem;
       color: $gray-medium;
       top: -0.25rem;
+      @include rtl;
+        transform: rotate(180deg);
     }
   }
   .less {
@@ -28,16 +30,16 @@ ul.category-tree {
   }
   .category-label {
     display: block;
-    padding-left: 0;
+    @include padding-left(0);
     .category {
       cursor: pointer;
       position: absolute;
       top: 0;
-      right: -9px;
+      @include right(-9px);
     }
   }
   ul {
-    padding-left: 1.563rem;
+    @include padding-left(1.563rem);
   }
   li {
     list-style: none;
@@ -46,7 +48,7 @@ ul.category-tree {
     background-position: 0 3px;
     .checkbox,
     .radio {
-      padding-left: 20px;
+      @include padding-left(20px);
       padding-top: 0;
     }
     > ul {
@@ -60,7 +62,7 @@ ul.category-tree {
   border-radius: 0.1875rem;
   .categories-tree-actions {
     display: inline-block;
-    margin-left: 0.9375rem;
+    @include margin-left(0.9375rem);
     i.material-icons {
       font-size: 1.25rem;
       vertical-align: bottom;
