--- a/admin-dev/themes/new-theme/scss/components/_tinymce.sass
+++ b/admin-dev/themes/new-theme/scss/components/_tinymce.sass
@@ -18,8 +18,9 @@
     line-height: normal
     font-weight: normal
     box-sizing: content-box
-    text-align: left
-    direction: ltr
+    @include text-align(left)
+    @include rtl
+        direction: rtl
     *
         margin: 0
         padding: 0
@@ -39,9 +40,10 @@
         -webkit-tap-highlight-color: transparent
         line-height: normal
         font-weight: normal
-        text-align: left
+        @include text-align(left)
         box-sizing: content-box
-        direction: ltr
+        @include rtl
+            direction: rtl
 
 .mce-widget
     margin: 0
@@ -62,9 +64,10 @@
     -webkit-tap-highlight-color: transparent
     line-height: normal
     font-weight: normal
-    text-align: left
+    @include text-align(left)
     box-sizing: content-box
-    direction: ltr
+    @include rtl
+        direction: rtl
     *
         margin: 0
         padding: 0
@@ -84,9 +87,10 @@
         -webkit-tap-highlight-color: transparent
         line-height: normal
         font-weight: normal
-        text-align: left
+        @include text-align(left)
         box-sizing: content-box
-        direction: ltr
+        @include rtl
+            direction: rtl
     button
         box-sizing: border-box
 
@@ -119,7 +123,7 @@ div.mce-fullscreen
     top: 0
     width: 100%
     height: auto
-    left: 0
+    @include left(0)
 
 .mce-tinymce
     display: block
@@ -129,7 +133,7 @@ div.mce-fullscreen
     position: absolute
     top: 0
     padding: 8px
-    right: 0
+    @include right(0)
 
 div.mce-edit-area
     background: #FFF
@@ -178,7 +182,7 @@ div.mce-edit-area
             border-color: #a1a1a1
 
 .mce-grid-border
-    margin: 0 4px 0 4px
+    margin: 0 4px
     a
         border-color: #d6d6d6
         width: 13px
@@ -202,8 +206,8 @@ div.mce-tinymce-inline
         margin-bottom: 0
 
 .mce-rtl .mce-wordcount
-    left: 0
-    right: auto
+    @include left(0)
+    @include right(auto)
 
 .mce-container, .mce-container-body
     display: block
@@ -219,15 +223,15 @@ div.mce-tinymce-inline
     opacity: .4
     filter: alpha(opacity = 40)
     zoom: 1
-    right: 2px
+    @include right(2px)
 
 .mce-scrollbar-h
     top: auto
     bottom: 2px
     width: 100%
     height: 7px
-    right: auto
-    left: 2px
+    @include right(auto)
+    @include left(2px)
 
 .mce-scrollbar-thumb
     position: absolute
@@ -288,22 +292,22 @@ div.mce-tinymce-inline
                 border-bottom-color: #9e9e9e
                 border-bottom-color: rgba(0, 0, 0, 0.25)
                 top: -11px
-                left: 50%
-                margin-left: -11px
+                @include left(50%)
+                @include margin-left(-11px)
                 &:after
                     top: 1px
                     border-top-width: 0
                     border-bottom-color: #fff
-                    margin-left: -10px
+                    @include margin-left(-10px)
             &.mce-start
-                margin-left: -22px
+                @include margin-left(-22px)
                 > .mce-arrow
-                    left: 20px
+                    @include left(20px)
             &.mce-end
-                margin-left: 22px
+                @include margin-left(22px)
                 > .mce-arrow
-                    right: 10px
-                    left: auto
+                    @include right(10px)
+                    @include left(auto)
 
 .mce-fullscreen
     border: 0
@@ -316,7 +320,7 @@ div.mce-tinymce-inline
 div.mce-fullscreen
     position: fixed
     top: 0
-    left: 0
+    @include left(0)
 
 #mce-modal-block
     opacity: 0
@@ -327,7 +331,7 @@ div.mce-fullscreen
     width: 100%
     height: 100%
     background: #000
-    left: 0
+    @include left(0)
     &.mce-in
         opacity: .3
         filter: alpha(opacity = 30)
@@ -343,7 +347,7 @@ div.mce-fullscreen
     opacity: 0
     -webkit-transition: opacity 150ms ease-in
     transition: opacity 150ms ease-in
-    left: 0
+    @include left(0)
 
     border-radius: 6px
     &.mce-in
@@ -363,7 +367,7 @@ div.mce-fullscreen
         cursor: pointer
         height: 20px
         overflow: hidden
-        right: 15px
+        @include right(15px)
 
 .mce-close:hover
     color: #adadad
@@ -373,7 +377,7 @@ div.mce-fullscreen
     font-size: 14px
     font-weight: normal
     text-rendering: optimizelegibility
-    padding-right: 10px
+    @include padding-right(10px)
 
 .mce-window .mce-container-body
     display: block
@@ -382,7 +386,7 @@ div.mce-fullscreen
     display: block
     background-color: #fff
     border-top: 1px solid #c5c5c5
-    border-radius: 0 0 6px 6px
+    @include border-radius(0, 0, 6px, 6px)
 
 .mce-window-head .mce-dragh
     position: absolute
@@ -390,7 +394,7 @@ div.mce-fullscreen
     cursor: move
     width: 90%
     height: 100%
-    left: 0
+    @include left(0)
 
 .mce-window
     iframe
@@ -440,7 +444,7 @@ body .mce-abs-layout-item
     text-align: center
     white-space: normal
     border-radius: 3px
-    padding: 5px 8px 4px 8px
+    padding: 5px 8px 4px
 
 .mce-tooltip-arrow
     position: absolute
@@ -456,13 +460,13 @@ body .mce-abs-layout-item
     border-top-color: #000
 
 .mce-tooltip-arrow-e
-    border-left-color: #000
+    @include border-left-color(#000)
 
 .mce-tooltip-arrow-w
-    border-left-color: #000
+    @include border-left-color(#000)
 
 .mce-tooltip-nw, .mce-tooltip-sw
-    margin-left: -14px
+    @include margin-left(-14px)
 
 .mce-tooltip-n .mce-tooltip-arrow
     top: 0
@@ -470,8 +474,8 @@ body .mce-abs-layout-item
     border-top: none
     border-left-color: transparent
     border-right-color: transparent
-    left: 50%
-    margin-left: -5px
+    @include left(50%)
+    @include margin-left(-5px)
 
 .mce-tooltip-nw .mce-tooltip-arrow
     top: 0
@@ -479,7 +483,7 @@ body .mce-abs-layout-item
     border-top: none
     border-left-color: transparent
     border-right-color: transparent
-    left: 10px
+    @include left(10px)
 
 .mce-tooltip-ne .mce-tooltip-arrow
     top: 0
@@ -487,7 +491,7 @@ body .mce-abs-layout-item
     border-top: none
     border-left-color: transparent
     border-right-color: transparent
-    right: 10px
+    @include right(10px)
 
 .mce-tooltip-s .mce-tooltip-arrow
     bottom: 0
@@ -495,8 +499,8 @@ body .mce-abs-layout-item
     border-bottom: none
     border-left-color: transparent
     border-right-color: transparent
-    left: 50%
-    margin-left: -5px
+    @include left(50%)
+    @include margin-left(-5px)
 
 .mce-tooltip-sw .mce-tooltip-arrow
     bottom: 0
@@ -504,7 +508,7 @@ body .mce-abs-layout-item
     border-bottom: none
     border-left-color: transparent
     border-right-color: transparent
-    left: 10px
+    @include left(10px)
 
 .mce-tooltip-se .mce-tooltip-arrow
     bottom: 0
@@ -512,23 +516,23 @@ body .mce-abs-layout-item
     border-bottom: none
     border-left-color: transparent
     border-right-color: transparent
-    right: 10px
+    @include right(10px)
 
 .mce-tooltip-e .mce-tooltip-arrow
     top: 50%
     margin-top: -5px
     border-left-style: solid
-    border-right: none
+    @include border-right(0)
     border-top-color: transparent
     border-bottom-color: transparent
-    right: 0
+    @include right(0)
 
 .mce-tooltip-w .mce-tooltip-arrow
     top: 50%
     margin-top: -5px
     border-top-color: transparent
     border-bottom-color: transparent
-    left: 0
+    @include left(0)
 
 .mce-btn
     position: relative
@@ -610,7 +614,7 @@ body .mce-abs-layout-item
 
 .mce-btn .mce-caret, .mce-btn-small .mce-caret
     margin-top: 8px
-    margin-left: 0
+    @include margin-left(0)
 
 .mce-caret
     display: inline-block
@@ -638,12 +642,12 @@ body .mce-abs-layout-item
     .mce-btn
         border: solid 1px #ccc
         border-radius: 0
-        border-right: none
+        @include border-right(0)
     .mce-first
-        border-radius: 3px 0 0 3px
+        @include border-radius(3px, 0, 0, 3px)
     .mce-last
-        border-right: solid 1px #ccc
-        border-radius: 0 3px 3px 0
+        @include border-right(1px solid #ccc)
+        @include border-radius(0, 3px, 3px, 0)
     .mce-first.mce-last
         border-radius: 3px
     .mce-btn.mce-flow-layout-item
@@ -666,7 +670,7 @@ i.mce-i-checkbox
     height: 14px
     text-align: center
     display: inline-block
-    margin: 0 3px 0 0
+    @include margin(0, 3px, 0, 0)
 
 .mce-checked i.mce-i-checkbox
     color: #333
@@ -696,7 +700,7 @@ i.mce-i-checkbox
 
 .mce-colorbutton
     button
-        padding-right: 4px
+        @include padding-right(4px)
     .mce-preview
         display: block
         position: absolute
@@ -706,22 +710,22 @@ i.mce-i-checkbox
         width: 13px
         height: 2px
         overflow: hidden
-        margin-left: -14px
-        left: 50%
-        padding-right: 3px
+        @include margin-left(-14px)
+        @include left(50%)
+        @include padding-right(3px)
     &.mce-btn-small .mce-preview
         width: 16px
-        padding-right: 0
-        margin-left: -16px
+        @include padding-right(0)
+        @include margin-left(-16px)
     .mce-open
         border-left: 1px solid transparent
         border-right: 1px solid transparent
-        padding-left: 4px
+        @include padding-left(4px)
     &:hover .mce-open
         border-left-color: #bdbdbd
         border-right-color: #bdbdbd
     &.mce-btn-small .mce-open
-        padding: 0 3px 0 3px
+        padding: 0 3px
 
 .mce-rtl .mce-colorbutton
     direction: rtl
@@ -753,10 +757,10 @@ i.mce-i-checkbox
     &.mce-disabled input
         color: #adadad
     &.mce-has-open input
-        border-radius: 4px 0 0 4px
+        @include border-radius(4px, 0, 0, 4px)
     .mce-btn
-        border-left: 0
-        border-radius: 0 4px 4px 0
+        @include border-left(0)
+        @include border-radius(0, 4px, 4px, 0)
         background-color: #C5C5C5
 
 
@@ -777,7 +781,7 @@ i.mce-i-checkbox
     white-space: normal
     .mce-txt
         display: inline-block
-        padding-right: 3px
+        @include padding-right(3px)
     .mce-path-body
         display: inline-block
 
@@ -809,8 +813,8 @@ i.mce-i-checkbox
         margin-top: -15px
 
 .mce-fieldset-title
-    margin-left: 5px
-    padding: 0 5px 0 5px
+    @include margin-left(5px)
+    @include padding(0, 5px, 0, 5px)
 
 .mce-fit-layout
     display: inline-block
@@ -824,9 +828,9 @@ i.mce-i-checkbox
     display: inline-block
     *display: inline
     *zoom: 1
-    margin: 2px 0 2px 2px
+    @include margin(2px, 0, 2px, 2px)
     &.mce-last
-        margin-right: 2px
+        @include margin-right(2px)
 
 .mce-flow-layout
     white-space: normal
@@ -910,13 +914,13 @@ i.mce-i-checkbox
 
 .mce-listbox
     button
-        text-align: left
-        padding-right: 20px
+        @include text-align(left)
+        @include padding-right(20px)
         position: relative
     .mce-caret
         position: absolute
         margin-top: -2px
-        right: 8px
+        @include right(8px)
         top: 50%
 
 .mce-rtl .mce-listbox
@@ -929,14 +933,14 @@ i.mce-i-checkbox
 
 .mce-menu-item
     display: block
-    padding: 6px 15px 6px 12px
+    @include padding(6px, 15px, 6px, 12px)
     clear: both
     font-weight: normal
     color: #333
     white-space: nowrap
     cursor: pointer
     line-height: normal
-    border-left: 4px solid transparent
+    @include border-left(4px solid transparent)
     margin-bottom: 1px
     .mce-ico, .mce-text
         color: #333
@@ -951,7 +955,7 @@ i.mce-i-checkbox
 .mce-menu-shortcut
     display: inline-block
     color: #adadad
-    padding: 0 15px 0 20px
+    @include padding(0, 15px, 0, 20px)
 
 .mce-menu-item
     &:hover .mce-menu-shortcut, &.mce-selected .mce-menu-shortcut, &:focus .mce-menu-shortcut
@@ -959,21 +963,21 @@ i.mce-i-checkbox
     .mce-caret
         margin-top: 4px
         *margin-top: 3px
-        margin-right: 6px
+        @include margin-right(6px)
         border-top: 4px solid transparent
         border-bottom: 4px solid transparent
-        border-left: 4px solid #333
+        @include border-left(4px solid #333)
     &.mce-selected .mce-caret, &:focus .mce-caret, &:hover .mce-caret
-        border-left-color: #fff
+        @include border-left-color(#fff)
 
 .mce-menu-align
     .mce-menu-shortcut
         *margin-top: -2px
         position: absolute
-        right: 0
+        @include right(0)
     .mce-caret
         position: absolute
-        right: 0
+        @include right(0)
 
 .mce-menu-item.mce-active i
     visibility: visible
@@ -982,7 +986,7 @@ i.mce-i-checkbox
     background-color: #DFF5F9
 
 .mce-menu-item-preview.mce-active
-    border-left: 5px solid #aaa
+    @include border-left(5px solid #aaa)
 
 .mce-menu-item-normal.mce-active
     .mce-text
@@ -1036,7 +1040,7 @@ div.mce-menu .mce-menu-item-sep, .mce-menu-item-sep:hover
     left: 0
     top: 0
     z-index: 1000
-    padding: 5px 0 5px 0
+    padding: 5px 0
     margin: 2px 0 0
     min-width: 160px
     background: #fff
@@ -1054,21 +1058,21 @@ div.mce-menu .mce-menu-item-sep, .mce-menu-item-sep:hover
     *display: inline
 
 .mce-menu-sub-tr-tl
-    margin: -6px 0 0 -1px
+    @include margin(-6px, 0, 0, -1px)
 
 .mce-menu-sub-br-bl
-    margin: 6px 0 0 -1px
+    @include margin(6px, 0, 0, -1px)
 
 .mce-menu-sub-tl-tr
-    margin: -6px 0 0 1px
+    @include margin(-6px, 0, 0, 1px)
 
 .mce-menu-sub-bl-br
-    margin: 6px 0 0 1px
+    @include margin(6px, 0, 0, 1px)
 
 .mce-container-body
     .mce-resizehandle
         position: absolute
-        right: 0
+        @include right(0)
         bottom: 0
         width: 16px
         height: 16px
@@ -1089,13 +1093,13 @@ i.mce-i-resize
         border-left: 1px solid transparent
         border-right: 1px solid transparent
     button
-        padding-right: 4px
+        @include padding-right(4px)
     .mce-open
-        padding-left: 4px
+        @include padding-left(4px)
         &.mce-active
             box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.05)
     &.mce-btn-small .mce-open
-        padding: 0 3px 0 3px
+        padding: 0 3px
 
 .mce-rtl .mce-splitbtn
     direction: rtl
@@ -1146,7 +1150,7 @@ i.mce-i-resize
     transition: border linear .2s, box-shadow linear .2s
     height: 28px
     resize: none
-    padding: 0 4px 0 4px
+    padding: 0 4px
     white-space: pre-wrap
     *white-space: pre
     color: #333
