--- a/admin-dev/themes/new-theme/scss/components/layout/_nav_bar.scss
+++ b/admin-dev/themes/new-theme/scss/components/layout/_nav_bar.scss
@@ -5,6 +5,7 @@
   width: $size-navbar-width;
   padding-top: 0.625rem + $size-header-height;
   height: 100%;
+  @include left(0);
   @include media-breakpoint-down(sm) {
     visibility: hidden;
   }
@@ -13,21 +14,21 @@
     line-height: 1.75rem;
   }
   &.mobile-nav {
-    margin-left: -100%;
+    @include margin-left(-100%);
     width: 90%;
     transition: all .5s ease-in;
     &.expanded {
       visibility: visible;
-      margin-left: 0;
+      @include margin-left(0);
       overflow-y: scroll;
     }
     .onboarding-navbar {
       display: none;
     }
     .panel-collapse {
-      padding-left: 0;
+      @include padding-left(0);
       .link-leveltwo .link {
-        padding-left: 3.125rem;
+        @include padding-left(3.125rem);
         background: $gray-dark-hover;
       }
     }
@@ -64,12 +65,12 @@
         content: "\E313";
         font-size: 1.25rem;
         line-height: 1.375rem;
-        margin-left: 0.625rem;
+        @include margin-left(0.625rem);
         vertical-align: bottom;
       }
     }
     .items-list {
-      padding-left: 0;
+      @include padding-left(0);
       a:focus {
           background-color: transparent;
       }
@@ -81,12 +82,12 @@
           font-weight: bold;
         }
         &.shop {
-          padding: 0.9375rem 0.9375rem 0.9375rem 2.5rem;
+          @include padding(0.9375rem, 0.9375rem, 0.9375rem, 2.5rem);
           a {
               display: inline-block;
               width: auto;
               &.link-shop {
-                  float: right;
+                @include float(right);
                   .material-icons {
                       font-size: 1.25rem;
                       color: $gray-medium;
@@ -123,7 +124,7 @@
     display:block;
     color: $gray-dark-text;
     text-decoration: none;
-    padding: 0 0.3125rem 0 $padding-size;
+    @include padding(0, 0.3125rem, 0, $padding-size);
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
@@ -135,9 +136,9 @@
     }
   }
   &.-active {
-    border-right: 0.1875rem solid $gray-dark-text-hover;
+    @include border-right(0.1875rem solid $gray-dark-text-hover);
     @include media-breakpoint-down(sm) {
-      border-right: none;
+      @include border-right(none);
     }
   }
   &.-active > .link,
@@ -162,7 +163,7 @@
   &.-hover > .submenu {
     display: inline-block;
     position: absolute;
-    left: $size-navbar-width;
+    @include left($size-navbar-width);
     margin-top: -$size-navbar-link-height;
     padding: 0;
   }
@@ -171,9 +172,9 @@
       margin-top: 0;
       position: inherit;
       display: block;
-      padding-left: $padding-size;
+      @include padding-left($padding-size);
       @include media-breakpoint-down(sm) {
-        padding-left: 0;
+        @include padding-left(0);
       }
     }
   }
@@ -214,7 +215,7 @@
 
   > .title {
     background: $gray-dark;
-    padding-right: 10px;
+    @include padding-right(10px);
   }
 }
 
@@ -250,18 +251,18 @@
 
       > .link {
         > .material-icons {
-          float: left;
+          @include float(left);
         }
 
         > span {
           display: inline-block;
-          margin-left: 2.813rem;
-          float: left;
+          @include margin-left(2.813rem);
+          @include float(left);
         }
       }
 
       > .submenu {
-        left: $size-navbar-width-mini;
+        @include left($size-navbar-width-mini);
         width: $size-navbar-width - $size-navbar-width-mini;
         margin-top: 0;
       }
@@ -290,7 +291,7 @@
   .link-leveltwo {
     > .link {
       padding: 0 20px;
-      text-align: left;
+      @include text-align(left);
     }
   }
 }
@@ -306,7 +307,7 @@
     height: 100%;
     z-index: 501;
     top: 0;
-    left: 0;
+    @include left(0);
     &.expanded {
       opacity: 1;
       visibility: visible;
