--- a/admin-dev/themes/new-theme/scss/components/layout/_main_header.scss
+++ b/admin-dev/themes/new-theme/scss/components/layout/_main_header.scss
@@ -11,10 +11,10 @@
   }
   .mobile & {
     > .component {
-      margin-right: 0;
+      @include margin-right(0);
     }
     .notification {
-      margin-right: 0.3125rem;
+      @include margin-right(0.3125rem);
     }
     .notification-center .dropdown-menu {
       margin-top: 0.3125rem;
@@ -33,12 +33,12 @@
   > .component {
     display: inline-block;
     margin: {
-      left: 0.5rem;
-      right: 0.5rem;
+      @include left(0.5rem);
+      @include right(0.5rem);
     }
     > .ps-dropdown:not(.stores) {
       > .ps-dropdown-menu {
-        left: 1.063rem;
+        @include left(1.063rem);
         .dropdown-item {
           justify-content: flex-start;
           margin: 0;
@@ -47,30 +47,30 @@
         }
         .material-icons {
           margin-top: 0.125rem;
-          margin-right: 0.625rem;
+          @include margin-right(0.625rem);
           font-size: 1.25rem;
         }
       }
     }
     > .stores .ps-dropdown-menu {
-      left: auto;
-      right: 0;
+      @include left(auto);
+      @include right(0);
     }
     > .bo_search_form {
       position: relative;
       margin-top: 0.25rem;
       .items-list {
         list-style: none;
-        padding-left: 0;
+        @include padding-left(0);
         .material-icons {
           vertical-align: middle;
-          margin-right: 0.625rem;
+          @include margin-right(0.625rem);
         }
       }
     }
   }
   .shop-state {
-    margin-right: 1.25rem;
+    @include margin-right(1.25rem);
     line-height: $size-header-height;
     > .material-icons {
       color: $secondary;
@@ -78,14 +78,14 @@
     }
   }
   > .component.-norightmargin {
-    margin-right: 0;
+    @include margin-right(0);
   }
 }
 .shop-list{
   > .link {
     display: inline-block;
     color: $gray-dark;
-    margin-right: 1.25rem;
+    @include margin-right(1.25rem);
     @include single-line-block($size-header-height);
   }
 }
@@ -101,7 +101,7 @@
   }
   .items-list {
     list-style: none;
-    padding-left: 0;
+    @include padding-left(0);
     li:first-child a {
       color: $brand-primary;
       &:hover {
@@ -128,7 +128,7 @@
     }
     .group {
       a {
-        padding-left: 1.875rem;
+        @include padding-left(1.875rem);
         padding-top: 0.3125rem;
         padding-bottom: 0.3125rem;
       }
@@ -136,7 +136,7 @@
     .shop {
       display: flex;
       a {
-        padding-left: 3.75rem;
+        @include padding-left(3.75rem);
         justify-content: space-between;
       }
       a.disabled {
@@ -144,10 +144,10 @@
       }
       a.link-shop {
         text-decoration: none;
-        float: right;
-        margin-left: auto;
-        padding-left: inherit;
-        padding-right: 10px;
+        @include float(right);
+        @include margin-left(auto);
+        @include padding-left(inherit);
+        @include padding-right(10px);
         padding-top: 3px;
         i.material-icons {
           cursor: pointer;
@@ -163,7 +163,7 @@
     }
     .material-icons {
       vertical-align: middle;
-      margin-right: 0.625rem;
+      @include margin-right(0.625rem);
     }
   }
   .selected-item {
@@ -174,17 +174,17 @@
     }
     .arrow-down {
       top: 0;
-      left: 0;
+      @include left(0);
       font-size: 1.25rem;
     }
     vertical-align: middle;
   }
   .dropdown-menu {
     &::before {
-      left: 11.56rem;
+      @include left(11.56rem);
     }
     &::after {
-      left: 11.63rem;
+      @include left(11.63rem);
     }
   }
   .dropdown-item {
@@ -195,7 +195,7 @@
 .employee-dropdown {
   > .person {
     border: solid 1px $gray-medium;
-    margin: 0.5rem 1.875rem 0 0;
+    @include margin(0.5rem, 1.875rem, 0, 0);
     cursor: pointer;
     .material-icons {
       font-size: 1.25rem;
@@ -211,7 +211,7 @@
     &::after {
       position: absolute;
       top: -6px;
-      left: 137px;
+      @include left(137px);
       display: inline-block;
       border-right: 6px solid transparent;
       border-bottom: 6px solid #ffffff;
@@ -221,7 +221,7 @@
     &::before {
       position: absolute;
       top: -7px;
-      left: 136px;
+      @include left(136px);
       display: inline-block;
       border-right: 7px solid transparent;
       border-bottom: 7px solid #ccc;
@@ -243,7 +243,7 @@
         vertical-align: middle;
         color: $gray-medium;
         font-size: 1.375rem;
-        margin-right: 0.3125rem;
+        @include margin-right(0.3125rem);
       }
     }
   }
