--- a/admin-dev/themes/new-theme/scss/pages/_product_page.scss
+++ b/admin-dev/themes/new-theme/scss/pages/_product_page.scss
@@ -37,8 +37,8 @@
     display: block;
     position: fixed;
     top: $size-header-height - 0.0625rem;
-    left: $size-navbar-width;
-    right: 0;
+    @include left($size-navbar-width);
+    @include right(0);
     box-shadow: $gray-dark 0 0 10px;
     z-index: 400;
     height: 1px;
@@ -47,7 +47,7 @@
   // Resets
   ul.nostyle {
     list-style: none;
-    padding-left: 0;
+    @include padding-left(0);
   }
   .tab-content {
     padding: 0;
@@ -70,7 +70,7 @@
       background-size: 4%;
     }
     .help-box {
-      margin-left: 0.625rem;
+      @include margin-left(0.625rem);
       margin-top: 0.625rem;
     }
     .form_step1_type_product,
@@ -112,18 +112,18 @@
     z-index: 10;
     background: $white;
     bottom: 0;
-    left: $size-navbar-width;
-    right: 0;
+    @include left($size-navbar-width);
+    @include right(0);
     .for-switch {
       display: inline-block;
-      margin-left: 1.25rem;
-      margin-right: 0.25rem;
+      @include margin-left(1.25rem);
+      @include margin-right(0.25rem);
       font-size: 0.875rem;
     }
     .duplicate,
     .go-catalog,
     .new-product {
-      margin-right: 0.625rem;
+      @include margin-right(0.625rem);
       margin-top: 0.625rem;
     }
     .preview,
@@ -202,7 +202,7 @@
     display: inline-block;
     border: 1px solid $gray-light;
     outline: solid 4px $white;
-    margin: 0 0.625rem 0 0;
+    @include margin(0, 0.625rem, 0, 0);
     border-radius: 0.1875rem;
   }
 
@@ -246,7 +246,7 @@
     transition: width 0.5s ease-out, margin 0.5s ease-out;
     z-index: 1;
     &.col-md-8 {
-      border-right: solid 1px $gray-light;
+      @include border-right(solid 1px $gray-light);
     }
     &.dropzone {
       .dz-preview {
@@ -379,15 +379,15 @@
   #product-images-form-container {
     min-height: 200px;
     top: 0;
-    right: 0;
+    @include right(0);
     cursor: default !important;
-    margin: 10px 0 5px 5px;
-    float: left;
+    @include margin(10px, 0, 5px, 5px);
+    @include float(left);
     position: absolute;
     z-index: 0;
     .close {
       position: absolute;
-      right: 0.5em;
+      @include right(0.5em);
       top: 0;
       z-index: 1;
     }
@@ -453,7 +453,7 @@
       visibility: hidden;
       position: absolute;
       top: 0.0625rem;
-      right: 0.0625rem;
+      @include right(0.0625rem);
     }
     &:hover {
       border: 2px $brand-primary solid;
@@ -691,7 +691,7 @@
         font-size: 0.8125rem;
       }
       .attribute-actions {
-        text-align: right;
+        @include text-align(right);
         line-height: $font-size-base;
         .btn-sm {
           padding: 0;
@@ -714,9 +714,9 @@
     .top-logo {
       max-width: 45px;
       max-height: 45px;
-      float: left;
+      @include float(left);
       margin: {
-        right: 20px;
+        @include right(20px);
         bottom: 20px;
       }
     }
@@ -821,7 +821,7 @@
       &:after {
         content: "\E316";
         font-family: "Material Icons";
-        float: right;
+        @include float(right);
       }
       &.collapsed:after {
         content: "\E313";
@@ -845,10 +845,10 @@
             margin: 0;
             .pretty-checkbox {
               content: "";
-              float: left;
+              @include float(left);
               height: 1rem;
               width: 1rem;
-              margin-right: 0.4375rem;
+              @include margin-right(0.4375rem);
               border: 0.0625rem solid $gray-light;
             }
           }
@@ -979,7 +979,7 @@
     }
     .nav-tabs {
       height: 3.125rem;
-      width: 125rem;
+      width: auto;
       position: relative;
       .nav-link.active:not(.description-tab) {
         border-top: transparent;
@@ -1020,14 +1020,14 @@
     #bulk-combinations-container {
       width: 95%;
       #delete-combinations {
-        float: right;
+        @include float(right);
       }
       div.row:first-child .form-control-label {
         min-height: auto;
       }
       .btn-block {
         width: auto;
-        float: right;
+        @include float(right);
       }
     }
     .category-hr {
