--- a/themes/classic/assets/css/hookLiveEdit.css
+++ b/themes/classic/assets/css/hookLiveEdit.css
@@ -8,7 +8,7 @@
     font-size: 13px;
     font-style: italic;
     height: 35px;
-    position: absolute;
+    position: relative;
     top: 0;
     width: 100%;
     min-width: 200px;
@@ -33,6 +33,7 @@
     padding-right: 5px;
     width: 40px;
     float: left;
+    margin:0;
 }
 
 .dndModule .toolbar .toolbar-btn a {
@@ -56,7 +57,6 @@
 }
 
 .dndModule > * {
-    padding-top: 35px;
     width: 100%;
 }
 
