BO: Make the menu scrollable

--- a/admin-dev/themes/default/sass/partials/_nav.sass
+++ b/admin-dev/themes/default/sass/partials/_nav.sass
@@ -9,6 +9,7 @@ $min-height: 950px
 	height: 100%
 	z-index: 500
 	background-color: $main-color
+	overflow: auto
 	@include left(0)
 	ul.menu
 		.categorytab
