--- a/admin-dev/themes/new-theme/public/theme.css
+++ b/admin-dev/themes/new-theme/public/theme.css
@@ -9307,7 +9307,8 @@ textarea:focus:focus, input[type="text"]:focus:focus, input[type="password"]:foc
   width: 13.13rem;
   padding-top: 50px;
   padding-top: 3.125rem;
-  height: 100%; }
+  height: 100%;
+  overflow: auto; }
   @media (max-width: 767px) {
     .nav-bar {
       visibility: hidden; } }
