--- a/src/PrestaShopBundle/Resources/views/Admin/Module/Includes/action_menu.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Module/Includes/action_menu.html.twig
@@ -39,18 +39,33 @@
     </a>
   </div>
   {% else %}
-  <div class="btn-group form-action-button-container">
-    <form class="btn-group form-action-button" method="post" action="{{ urls[url_active] }}">
-      <button type="submit" class="btn btn-primary-reverse btn-primary-outline light-button module_action_menu_{{ url_active }}"
-          data-confirm_modal="module-modal-confirm-{{ name }}-{{ url_active }}" {% if (level < constant('PrestaShopBundle\\Security\\Voter\\PageVoter::LEVEL_UPDATE')) or (level < constant('PrestaShopBundle\\Security\\Voter\\PageVoter::LEVEL_DELETE') and (url_active not in ['configure', 'install', 'upgrade'])) %} disabled="disabled" {% endif %}>
+    <div class="btn-group form-action-button-container">
+      <form class="btn-group form-action-button" method="post" action="{{ urls[url_active] }}">
+        <button type="submit" class="btn btn-primary-reverse btn-primary-outline light-button module_action_menu_{{ url_active }}"
+          data-confirm_modal="module-modal-confirm-{{ name }}-{{ url_active }}"
+          {% if
+            level < constant('PrestaShopBundle\\Security\\Voter\\PageVoter::LEVEL_UPDATE') or
+            (
+              level < constant('PrestaShopBundle\\Security\\Voter\\PageVoter::LEVEL_DELETE') and
+              url_active not in ['enable', 'disable', 'configure', 'install', 'upgrade']
+            )
+          %}
+            disabled="disabled"
+          {% endif %}>
           {{ url_active|capitalize|replace({'_': " "})|trans({}, 'Admin.Actions') }}
-      </button>
-      {% if urls|length > 1 %}
-      <input type="hidden" class="btn">
-      {% endif %}
-    </form>
-    {% if (urls|length > 1) %}
-      {% if (level > constant('PrestaShopBundle\\Security\\Voter\\PageVoter::LEVEL_CREATE')) or ((('configure' in urls|keys) and ('upgrade' in urls|keys)) and  url_active in ['configure', 'install', 'upgrade']) %}
+        </button>
+        {% if urls|length > 1 %}
+          <input type="hidden" class="btn">
+        {% endif %}
+      </form>
+      {% if (urls|length > 1) %}
+        {% if
+          level > constant('PrestaShopBundle\\Security\\Voter\\PageVoter::LEVEL_CREATE') or
+          (
+            (('configure' in urls|keys) and (('upgrade' in urls|keys) or ('enable' in urls|keys) or ('disable' in urls|keys))) and
+            url_active in ['enable', 'disable', 'configure', 'install', 'upgrade']
+          )
+        %}
           <button type="button" class="btn btn-primary-outline  dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <span class="caret"></span>
             <span class="sr-only">{{ 'Toggle Dropdown'|trans({}, 'Admin.Modules.Feature') }}</span>
@@ -58,7 +73,13 @@
           <div class="dropdown-menu">
             {% for module_action, module_url in urls %}
               {% if module_action != url_active %}
-                {% if ((level >= constant('PrestaShopBundle\\Security\\Voter\\PageVoter::LEVEL_DELETE')) or ((level < constant('PrestaShopBundle\\Security\\Voter\\PageVoter::LEVEL_DELETE')) and (module_action in ['configure', 'install', 'upgrade']))) %}
+                {% if
+                  level >= constant('PrestaShopBundle\\Security\\Voter\\PageVoter::LEVEL_DELETE') or
+                  (
+                    level < constant('PrestaShopBundle\\Security\\Voter\\PageVoter::LEVEL_DELETE') and
+                    module_action in ['enable', 'disable', 'configure', 'install', 'upgrade']
+                  )
+                %}
                   <li>
                     <form method="post" action="{{ module_url }}">
                       <button type="submit" class="dropdown-item module_action_menu_{{ module_action }}" data-confirm_modal="module-modal-confirm-{{ name }}-{{ module_action }}">
@@ -70,8 +91,8 @@
               {% endif %}
             {% endfor %}
           </div>
+        {% endif %}
       {% endif %}
-    {% endif %}
-  </div>
+    </div>
   {% endif %}
 {% endif %}
