--- a/themes/classic/_dev/css/partials/_commons.scss
+++ b/themes/classic/_dev/css/partials/_commons.scss
@@ -1,11 +1,3 @@
-.lang-rtl {
-  * {
-    direction: rtl !important;
-  }
-  main {
-    text-align: right !important;
-  }
-}
 body,
 html {
   height: 100%;
@@ -17,6 +9,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   color: $gray-darker;
   line-height: 1.25em;
+  direction: ltr;
 }
 ul {
   list-style: none;
