BO: Fix menu overflow
If merchant use smaller screen resolution and if he have more tabs in sidebar they are not visible becouse there is no enough space and it is not possible to scroll navbar

--- a/admin-dev/themes/default/sass/partials/_nav.sass
+++ b/admin-dev/themes/default/sass/partials/_nav.sass
@@ -4,6 +4,7 @@ $menu-item-size: 34px
 $min-height: 950px
 
 #nav-sidebar
+  overflow: auto;
 	position: fixed
 	width: $widthSidebarNav
 	height: 100%
